# nb-cli

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README_en.md  build.py  get-cli.py  install-cli.py  package.json  pdm_build.py  pyproject.toml
.basedpyright/: .gitattributes  baseline.json
.devcontainer/: devcontainer.json
.github/actions/build-api-doc/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: basedpyright.yml  docker.yml  lints-and-checks.yml  prek.yml  release.yml  ruff.yml  website-deploy.yml  website-preview-cd.yml  website-preview.yml
nb_cli/: __init__.py  __main__.py  compat.py  config.py  consts.py  cookiecutter.json  exceptions.py  extensions.py  handlers.py  i18n.py  utils.py
nb_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nb_cli/adapter/{{cookiecutter.adapter_slug}}/: bot.{{cookiecutter.py}}  config.{{cookiecutter.py}}
nb_cli/cli/: __init__.py  customize.py  utils.py
nb_cli/cli/commands/: __init__.py  adapter.py  cache.py  config.py  driver.py  plugin.py  project.py  self.py  utils.py
nb_cli/commands/: __init__.py  adapter.py  config.py  deploy.py  driver.py  main.py  plugin.py  self.py
nb_cli/config/: __init__.py  model.py  parser.py
nb_cli/handlers/: __init__.py  _config.py  _docker.py  _pip.py  adapter.py  config.py  data.py  deploy.py  driver.py  environment.py  generate.py  meta.py  pip.py  plugin.py  process.py  project.py  reloader.py  script.py  self.py  signal.py  store.py  utils.py  venv.py
nb_cli/hooks/: post_gen_project.py
nb_cli/loader/: __init__.py  process.py  reloader.py  utils.py
nb_cli/locale/zh_CN/LC_MESSAGES/: nb-cli.po
nb_cli/log/: __init__.py
nb_cli/plugin/: __init__.py  cookiecutter.json  load.py  manager.py  plugin.py  utils.py
nb_cli/plugin/hooks/: post_gen_project.py
nb_cli/plugin/{{cookiecutter.plugin_slug}}/: __init__.{{cookiecutter.py}}
nb_cli/project/: cookiecutter.json
nb_cli/project/{{cookiecutter.project_slug}}/: .env.dev  .env.prod  Dockerfile  README.md  bot.{{cookiecutter.py}}  pyproject.toml
nb_cli/prompts/: __init__.py  checkbox.py  confirm.py  input.py  list.py
nb_cli/template/adapter/: cookiecutter.json
nb_cli/template/adapter/{{cookiecutter.adapter_slug}}/: __init__.{{cookiecutter.py}}  adapter.{{cookiecutter.py}}  bot.{{cookiecutter.py}}  config.{{cookiecutter.py}}  event.{{cookiecutter.py}}  message.{{cookiecutter.py}}
nb_cli/template/bootstrap/{{cookiecutter.project_slug}}/: pyproject.toml
nb_cli/template/plugin/: cookiecutter.json
nb_cli/template/plugin/hooks/: post_gen_project.py
nb_cli/template/plugin/{{cookiecutter.plugin_slug}}/: __init__.{{cookiecutter.py}}  config.{{cookiecutter.py}}
nb_cli/template/project/bootstrap/: cookiecutter.json
nb_cli/template/project/bootstrap/{{cookiecutter.computed.project_slug}}/: .env.prod  README.md  pyproject.toml
nb_cli/template/project/bootstrap/{{cookiecutter.project_slug}}/: .env.prod  README.md  pyproject.toml
nb_cli/template/project/simple/: cookiecutter.json
nb_cli/template/project/simple/hooks/: post_gen_project.py  pre_gen_project.py
nb_cli/template/project/simple/{{cookiecutter.computed.project_slug}}/: .env  README.md  pyproject.toml
nb_cli/template/project/{{cookiecutter.project_slug}}/: bot.{{cookiecutter.py}}  pyproject.toml
nb_cli/template/scripts/meta/: _package_version.py.jinja  nonebot_version.py.jinja  pip_version.py.jinja  python_executable.py.jinja  python_version.py.jinja
nb_cli/template/scripts/plugin/: list_builtin_plugin.py.jinja
nb_cli/template/scripts/project/: _prepare.py.jinja  run_project.py.jinja
nb_cli/template/scripts/script/: _entrypoint.py.jinja  list_scripts.py.jinja  run_script.py.jinja
nb_cli/tui/: __init__.py  card.py  console.py  gallery.py
nb_cli/{{cookiecutter.project_slug}}/: .gitignore  bot.py  pyproject.toml
website/: docusaurus.config.js  docusaurus.config.ts  package.json  sidebars.js  sidebars.ts  tailwind.config.js  tsconfig.json
website/docs/: README.md
website/docs/guide/: README.md  advanced-search.md  config.md  create-a-project.md  create-a-project.mdx  deploy-project.md  installation.md  installation.mdx  nb_create.py  plugin.md  project-management.md  project-management.mdx  run-bot.md  run-bot.mdx  script.md  self-management.md  self-management.mdx  shell-completion.md
website/src/components/: Hero.tsx  RunCLI.tsx  RunPython.tsx
website/src/components/Home/: Feature.tsx  Hero.tsx
website/src/pages/: index.tsx
website/src/scripts/: nb_adapter.py  nb_create.py  nb_driver.py  nb_generate.py  nb_plugin.py  nb_run.py  nb_self.py
website/src/theme/: PyodideContext.ts
website/src/theme/FooterCopyright/: index.tsx
website/src/theme/LayoutProvider/: index.tsx
website/src/theme/LayoutProviders/: index.tsx
website/src/theme/PyodideProvider/: index.tsx
website/src/theme/hooks/: usePyodide.ts  usePyodideContext.ts
