[project]
name = "nb-cli"
version = "1.5.0"
description = "CLI for nonebot2"
authors = [{ name = "yanyongyu", email = "yyy@nonebot.dev" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["bot", "qq", "nonebot"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

requires-python = ">=3.10, <4.0"
dependencies = [
  "click ~=8.1",
  "httpx ~=0.18",
  "jinja2 ~=3.0",
  "wcwidth ~=0.2",
  "tomlkit ~=0.10",
  "watchfiles ~=1.0",
  "anyio >=3.6, < 5.0",
  "cookiecutter ~=2.2",
  "virtualenv ~=20.21",
  "cashews >=6.0, <8.0",
  "typing-extensions ~=4.4",
  "pyfiglet >=1.0.1, <2.0.0",
  "noneprompt >=0.1.10, <1.0.0",
  "pydantic >=1.10.0, <3.0.0, !=2.5.0, !=2.5.1",
  "importlib-metadata >=4.6; python_version < '3.10'",
  "nonestorage>=0.1.0",
  "rich>=14.1.0",
  "textual>=5.3.0",
]

[project.urls]
homepage = "https://cli.nonebot.dev/"
repository = "https://github.com/nonebot/nb-cli"

[tool.pdm.dev-dependencies]
i18n = ["babel ~=2.11"]
dev = [
  "ruff ~=0.6.0",
  "isort ~=5.10",
  "black >=22.3.0",
  "nonemoji ~=0.1",
  "pre-commit ~=3.1",
  "importlib-metadata",
]
docs = ["nb-autodoc >=1.0.0a5"]

[tool.pdm.scripts]
autodoc = { shell = "rm -rf ./website/docs/api/* && nb-autodoc nb_cli -s nb_cli.template && cp -r ./build/nb_cli/* ./website/docs/api/" }
extract = "pybabel extract -o messages.pot --project nb-cli --version 1.0.0 nb_cli/"
_init = "pybabel init -D nb-cli -i messages.pot -d nb_cli/locale/ -l {args}"
init = { composite = ["extract", "_init {args}"] }
_update = "pybabel update -D nb-cli -i messages.pot -d nb_cli/locale/"
update = { composite = ["extract", "_update"] }
compile = "pybabel compile -D nb-cli -d nb_cli/locale/"

[project.scripts]
nb = "nb_cli.__main__:main"

[tool.pdm.build]
custom-hook = "pdm_build.py"
run-setuptools = false

[tool.pyright]
typeCheckingMode = "standard"
pythonPlatform = "All"
reportPrivateImportUsage = false
reportShadowedImports = false
executionEnvironments = [
  { root = "./website", pythonVersion = "3.10" },
  { root = "./", pythonVersion = "3.10" },
]
defineConstant = { PYDANTIC_V2 = true }

[tool.black]
line-length = 88
extend-exclude = '''
^nb_cli/template/
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]
extend_skip = ["nb_cli/template/"]

[tool.ruff]
extend-exclude = ["nb_cli/template/"]

line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[build-system]
requires = ["pdm-backend", "babel~=2.11"]
build-backend = "pdm.backend"
