[project]
name = "nb-cli"
version = "1.7.3"
description = "CLI for nonebot2"
authors = [{ name = "yanyongyu", email = "yyy@nonebot.dev" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["bot", "qq", "nonebot"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

requires-python = ">=3.10, <4.0"
dependencies = [
  "click~=8.3",
  "httpx~=0.28",
  "jinja2~=3.1",
  "wcwidth~=0.6",
  "tomlkit~=0.14.0",
  "watchfiles~=1.1",
  "anyio>=4.13.0,<5.0",
  "cookiecutter~=2.7",
  "virtualenv~=21.2",
  "cashews>=7.5.0,<8.0",
  "typing-extensions~=4.15",
  "noneprompt>=0.1.11,<1.0",
  "pydantic>=1.10.0, <3.0.0, !=2.5.0, !=2.5.1",
  "nonestorage>=0.1.0",
  "rich>=14.3.3",
  "textual>=8.2.1",
  "packaging>=26.0",
  "pip>=26.0.1",
]

[dependency-groups]
i18n = [
    "babel~=2.18",
]
dev = [
    "ruff>=0.15.8",
    "nonemoji>=0.1.4",
    "prek>=0.3.8",
    "basedpyright>=1.38.4",
]
docs = [
    "nb-autodoc>=1.0.4",
]

[project.urls]
homepage = "https://cli.nonebot.dev/"
repository = "https://github.com/nonebot/nb-cli"

[project.scripts]
nb = "nb_cli.__main__:main"

[tool.basedpyright]
typeCheckingMode = "recommended"
pythonPlatform = "All"
reportImplicitStringConcatenation = false
reportImportCycles = "hint"
# reportPrivateImportUsage = false
# reportShadowedImports = false
executionEnvironments = [
  { root = "./website", pythonVersion = "3.10" },
  { root = "./", pythonVersion = "3.10" },
]
defineConstant = { PYDANTIC_V2 = true }

[tool.ruff]
extend-exclude = ["nb_cli/template/"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E402",     # module-import-not-at-top-of-file
  "UP037",    # quoted-annotation
  "RUF001",   # ambiguous-unicode-character-string
  "RUF002",   # ambiguous-unicode-character-docstring
  "RUF003",   # ambiguous-unicode-character-comment
  "ASYNC240", # blocking-path-method-in-async-function
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["nonebot", "tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pdm.scripts]
autodoc = { shell = "rm -rf ./website/docs/api/* && nb-autodoc nb_cli -s nb_cli.template && cp -r ./build/nb_cli/* ./website/docs/api/" }
extract = "pybabel extract -o messages.pot --project nb-cli --version 1.0.0 nb_cli/"
_init = "pybabel init -D nb-cli -i messages.pot -d nb_cli/locale/ -l {args}"
init = { composite = ["extract", "_init {args}"] }
_update = "pybabel update -D nb-cli -i messages.pot -d nb_cli/locale/"
update = { composite = ["extract", "_update"] }
compile = "pybabel compile -D nb-cli -d nb_cli/locale/"

[tool.pdm.build]
custom-hook = "pdm_build.py"
run-setuptools = false

[build-system]
requires = ["pdm-backend", "babel~=2.11"]
build-backend = "pdm.backend"
