[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_desc }}"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = []
plugin_dirs = ["{{ cookiecutter.source_dir }}/plugins"]
adapters = [{% for adapter in cookiecutter.adapters.builtin %}{{ adapter.module_name }}{% endfor %}]
builtin_plugins = [{% for plugin in cookiecutter.plugins.builtin %}"{{ plugin }}",{% endfor %}]