[project]
name = "{{ cookiecutter.nonebot.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.computed.project_desc }}"
readme = "README.md"
requires-python = ">=3.10, <4.0"
{% set dependencies = [cookiecutter.nonebot.driver_package] -%}
{% for adapter in cookiecutter.nonebot.adapters.values() -%}
{% set adapter_str = '"%s>=%s"'|format(adapter[0].project_link, adapter[0].version) -%}
{% set _ = dependencies.append(adapter_str) -%}
{%- endfor -%}
dependencies = [
    {{ dependencies|join(",\n")|indent(4) }}
]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.adapters]
{% for package, adapters in cookiecutter.nonebot.adapters.items() -%}
{% set adapters_ = [] -%}
{% for adapter in adapters -%}
{% set name = adapter.name -%}
{% set module_name = adapter.module_name -%}
{% set adapter_str = '{ name = "%s", module_name = "%s" }'|format(name, module_name) -%}
{% set _ = adapters_.append(adapter_str) -%}
{%- endfor -%}
{{ package }} = [
    {{ adapters_|join(",\n")|indent(4) }}
]
{% endfor -%}
"@local" = []

[tool.nonebot.plugins]
"@local" = []
