[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_desc }}"
readme = "README.md"
requires-python = "^3.8"

[tool.nonebot]
adapters = [
    {% for adapter in cookiecutter._adapters -%}
    { name = "{{ adapter.name }}", module_name = "{{ adapter.module_name }}" }
    {% endfor %}
]
plugins = []
plugin_dirs = []
builtin_plugins = [{{ cookiecutter._builtin_plugins|map("tojson")|join(", ") }}]
