[project]
name = "{{ cookiecutter.nonebot.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.computed.project_desc }}"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
{% set adapters = [] -%}
{% for adapter in cookiecutter.nonebot.adapters.values() -%}
{% set name = adapter.name -%}
{% set module_name = adapter.module_name -%}
{% set adapter_str = '{ name = "%s", module_name = "%s" }'|format(name, module_name) -%}
{% set _ = adapters.append(adapter_str) -%}
{%- endfor -%}
adapters = [
    {{ adapters|join(",\n")|indent(4) }}
]
plugins = []
plugin_dirs = ["{{ cookiecutter.custom.source_dir }}/plugins"]
builtin_plugins = []
